# physion

./: .gitignore  .gitmodules  LICENSE  README.md  launch.sh  pyproject.toml
docs/: linux_setup.sh  todo.md  windows-setup.txt
docs/hardware/: README.md
docs/install/: README.md  acquisition.md  acquisition.yml  physion-osx.yml  troubleshooting.md
notebooks/: Behavioral-Modulation-of-Evoked-Activity.py  Build-Movie.py  CSD-Analysis.py  Calcium-Signal-Preprocessing.py  DataFrame.py  Dataframe.ipynb  Dataframe.py  Dataset.ipynb  Dataset.py  Decoding-Responses.py  Ephys-Assembling.py  Ephys-and-Opto.py  EpisodeData.py  Linear-Model-from-Behavioral-Features.py  Linear-Model-of-Behavior-Modulation.py  Ocular-Dominance-maps.py  Ocular-Dominance.py  Orientation-Selectivity.ipynb  Orientation-Selectivity.py  Orientation-Tuning.py  README.md  Session-Summary.ipynb  Session-Summary.py  Stimulus-Evoked-Activity.ipynb  Stimulus-Evoked-Activity.py  Trial-Averaging.ipynb  Trial-Averaging.py  Visual-Areas-Segmentation.ipynb  Visual-Areas-Segmentation.py  Visual-Stim-Design.ipynb  Visual-Stim-Design.py  Visual-Stim-Snapshot.ipynb  Visual-Stim-Snapshot.py  Visualize-Raw-Data.ipynb  Visualize-Raw-Data.py  new-OD-from-flashed.py
notebooks/advanced/: Contrast-Sensitivity.py  Ephys-Analysis.py  Ephys-Assembling.py  Ephys-Synchronization.py  Gamma-Correction.py  Linear-Model.py  NIdaq-usage.py  Ocular-Dominance-Maps.py  Rebuild-Dataset.py  Temporal-Dynamics.py
notebooks/data/: Gamma-Correction-Measurements.csv
notebooks/old/: Visualize-RawData.py
notebooks/scripts/: Behavioral-Modulation-of-Evoked-Activity.py  Dataframe.py  Linear-Model-of-Behavioral-and-Sensory-Activity.py  Trial-Average.py  Visualize-RawData.py
src/: acquisition.yml  environment.yml
src/physion/: __init__.py  __main__.py
src/physion/acquisition/: DataTable.xlsx  README.md  __init__.py  gui.py  run.py  settings.py  tools.py
src/physion/analysis/: README.md  __init__.py  behavior.py  build_dataframe.py  dataframe.py  gui.py  process_NWB.py  read_NWB.py  stat_tools.py  summary_pdf.py  tools.py  trial_averaging.py  trial_averaging_gui.py
src/physion/assembling/: FOV_coordinates.py  README.md  __init__.py  add_ephys.py  add_ophys.py  build_NWB.py  dataset.py  gui.py  nwb.py  realign_from_photodiode.py  subject.py  tools.py  update_metadata.py
src/physion/behavior/: README.md  convert_to_movie.py  locomotion.py
src/physion/dataviz/: FOV.py  README.md  __init__.py  camera.py  ephys.py  episodes.py  gui.py  imaging.py  movie.py  plots.py  pupil.py  raw.py  snapshot.py  tools.py
src/physion/ephys/: NSI.py  alignement.py  tools.py
src/physion/facemotion/: gui.py  process.py  roi.py
src/physion/gui/: __init__.py  calendar.py  main.py  menu.py  parts.py
src/physion/hardware/: DummyCamera.py  FLIRCamera.py  README.md  ThorlabsCamera.py  __init__.py
src/physion/imaging/: 2P-Scanning-Properties.ipynb  Calcium-Signal-Preprocessing.ipynb  Calcium.py  README.md  __init__.py  bot_spatial_maps.py  convert_to_movie.py  dcnv.py  gui.py  red.py  red_label.py
src/physion/intrinsic/: README.md  RetinotopicMapping.py  SS_analysis.py  Visual-Area-Segmentation.ipynb  acquisition.py  analysis.py  build_protocols.py  load_camera.py  ocular_dominance.py  pdf.py  somatosensory.py  tools.py
src/physion/pupil/: README.md  gui.py  outliers.py  process.py  roi.py
src/physion/sharing/: README.md  prepare_nwb_files.py
src/physion/transfer/: gui.py
src/physion/utils/: README.md  __init__.py  (+12 more)
tests/: ISI_maps.py  assembling.py  binary_img_to_psychopy.py  build_NWB.py  read_NWB.py  test_binary_files.py  visual_stim.py
tests/plots/: dataframes.py  mpl_style.py  raw.py
(+316 files in other folders)
